--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9119
+server.port=8082
 
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
@@ -11,3 +11,6 @@ rabbitmq.routing.key=javaguides_routing_key
 
 rabbitmq.queue.json.name=javaguides_json
 rabbitmq.routing.json.key=javaguides_routing_json_key
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
